Warning cleanup of usused variables and functions